cluster/deployer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deployer
  namespace: ci
spec:
  selector:
    app: deployer
  ports:
  - port: 80
    targetPort: 8888
  type: ClusterIP
