cluster/deployer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deployer-ingress
  namespace: ci
spec:
  rules:
  - host: deployer.ginbits.com
    http:
      paths:
      - backend:
          service:
            name: deployer
            port:
              number: 80
        path: /
        pathType: Prefix
